<resources>
    <string name="app_name">MetricConverter</string>
    <string name="header">Metric Converter</string>
    <string name="author">Eunike Rahel Poli</string>
    <string name="select_metric_label">Input</string>
    <string name="input_placeholder">Input</string>
    <string name="to_">TO</string>
    <string name="from_">FROM</string>
    <string name="result_">Result</string>
    <string name="select_metric">-- Select Metric</string>
</resources>